// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`< BreadCrumb />  should render correctly multiple breadcrumbs. 1`] = `
.c0 {
  gap: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 a {
  gap: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #000000;
  text-transform: capitalize;
}

.c0 strong {
  font-size: 2rem;
  text-transform: capitalize;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div>
  <div
    class="c0"
  >
    <a
      href="/"
    >
      <strong>
        Home
      </strong>
      <strong>
        &gt;
      </strong>
    </a>
    <a
      href="/favoritos"
    >
      <strong>
        Favoritos
      </strong>
      <strong />
    </a>
  </div>
</div>
`;

exports[`< BreadCrumb />  should render correctly. 1`] = `
.c0 {
  gap: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 a {
  gap: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #000000;
  text-transform: capitalize;
}

.c0 strong {
  font-size: 2rem;
  text-transform: capitalize;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
  class="c0"
>
  <strong>
    Home
  </strong>
</div>
`;
